* Thu May 26 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include gsexec, a drop-in replacement for suexec,
  which can do suexec execution of CGI programs or
  pool-account mapping based on client DN.
* Tue May 24 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.9 ====
* Mon Apr 25 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Avoid build problems when using pre-0.9.7 OpenSSL
  (ie with Globus compatibility.)
* Mon Apr 25 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.8 ====
* Mon Feb 28 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix to GRSTgaclUndenyPerm in gridsite.h (bug #7135)
  from Marco Sottilaro <marco.sottilaro@datamat.it>
* Mon Feb 28 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.7 ====
* Thu Feb 24 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add more sanity checking (signatures, dates, issuer,)
  holder) to VOMS attribute parser.
* Mon Feb 21 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add bugfix for Bug #6357 from Fabrizio Pacini 
  <fabrizio.pacini@cern.ch> to fix delegation proxy
  cache names in OpenSSL 0.9.7.
* Sun Feb 20 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add basic VOMS support (signature checking not yet
  in) for X.509 Attribute Certificates.
* Tue Feb 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.6 ====
* Tue Feb 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include GRSTx509MakeProxyFileName() and 
  GRSTx509StringToChain() (code to used hashes in cached
  proxy file names.) Bug #6357
- Change ordering of output proxy file produced by 
  GRSTx509CacheProxy so proxy private key is the 2nd PEM
  encoded block (rather than at the end.) Bug #6365
- Add libgridsite_globus[.so|.a] in preparation for
  separate Globus OpenSSL and system OpenSSL versions
* Tue Feb 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.5 ====
* Tue Dec 14 2004 Andrew McNab <Andrew.McNab@man.ac.uk>